--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
